--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_map: ^2.0.0
+  latlong2: ^0.8.1
+  geolocator: ^9.0.1
+  url_launcher: ^6.1.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
