--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   latlong2: ^0.8.1
   geolocator: ^9.0.1
   url_launcher: ^6.1.12
+  flutter_speed_dial: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
